# Lpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md
Api/Headers/lpp/: Boolean
Buildtools/: Makefile.template.mk
Implementation/: CMakeLists.txt  Makefile
Implementation/Boolean/: Makefile
Implementation/Boolean/Src/: BasicBoolean.cpp  BasicBoolean.hpp  Boolean.cpp  Boolean.hpp  BooleanAnd.cpp  BooleanAnd.hpp  BooleanFunction.cpp  BooleanFunction.hpp  BooleanNegation.cpp  BooleanNegation.hpp  BooleanOr.cpp  BooleanOr.hpp  CachingBoolean.cpp  CachingBoolean.hpp  EqualityComparisonResult.hpp
Implementation/Boolean/TestSrc/: BasicBooleanTest.cpp  BooleanAndTest.cpp  BooleanFunctionTest.cpp  BooleanNegationTest.cpp  BooleanOrTest.cpp  EqualityComparisonResultTest.cpp
Implementation/Config/Src/: typedefs.hpp
Implementation/Generic/Src/: TernaryOperator.hpp
Implementation/Number/: Makefile  tags
Implementation/Number/Src/: BasicComplex.cpp  BasicComplex.hpp  BigInteger.cpp  BigInteger.hpp  Integer.cpp  IntegerExchangeFormat.cpp  IntegerExchangeFormat.hpp  IntegerFromReal.cpp  IntegerFromReal.hpp  IntegerOperations.cpp  IntegerOperations.hpp  IntegerSum.cpp  IntegerSum.hpp  Number.cpp  Number.hpp  NumberOperations.cpp  NumberOperations.hpp  RealNumber.cpp  RealNumber.hpp  RealNumberExchangeFormat.hpp  RealNumberOperations.cpp  RealNumberOperations.hpp
Implementation/Number/TestSrc/: IntegerOperationsTest.cpp  NumberOperationsTest.cpp  RealNumberOperationsTest.cpp
Implementation/Projects/Boolean/: CMakeLists.txt
Implementation/Projects/Boolean/Src/: BasicBoolean.hpp  Boolean.cpp  BooleanNegation.hpp  BooleanOr.cpp  EqualityComparisonResult.hpp
Implementation/Projects/Boolean/TestSrc/: BooleanAndTest.cpp  BooleanNegationTest.cpp  BooleanOrTest.cpp  EqualityComparisonResultTest.cpp
Implementation/Projects/Config/Src/: config.hpp
Implementation/Projects/Generic/Src/: ValueObject.hpp
Implementation/Projects/Number/: CMakeLists.txt
Implementation/Projects/Number/Src/: BasicComplex.cpp  BasicComplex.hpp  BasicInt.cpp  BasicInt.hpp  Generic.hpp  IntegerFromReal.hpp  Number.cpp  NumberExchangeFormat.cpp  NumberExchangeFormat.hpp  NumberOperations.cpp  NumberOperations.hpp  RealNumber.cpp  RealNumberExchangeFormat.cpp  RealNumberOperations.hpp
Implementation/Projects/Number/TestSrc/: IntegerOperationsTest.cpp  RealNumberOperationsTest.cpp
Projects/Boolean/: CMakeLists.txt
Projects/Boolean/Src/: BasicBoolean.cpp  BasicBoolean.hpp  Boolean.cpp  Boolean.hpp  BooleanAnd.cpp  BooleanAnd.hpp  BooleanFunction.cpp  BooleanFunction.hpp  BooleanNegation.cpp  BooleanNegation.hpp  BooleanOr.cpp  BooleanOr.hpp  CachingBoolean.cpp  CachingBoolean.hpp  EqualityComparisonResult.hpp
Projects/Boolean/TestSrc/: BasicBooleanTest.cpp  BooleanFunctionTest.cpp  EqualityComparisonResultTest.cpp
Projects/Config/Src/: defines.hpp  typedefs.hpp
Projects/Conversions/: CMakeLists.txt
Projects/Conversions/Src/: BoolFromNumber.cpp  BoolFromNumber.hpp  IntegerFromHexString.cpp  IntegerFromHexString.hpp
Projects/Generic/Src/: Function.hpp  Ordinal.hpp  ValueObject.hpp
Projects/Number/: CMakeLists.txt
Projects/Number/Src/: BasicComplex.cpp  BasicComplex.hpp  BasicInt.cpp  BasicInt.hpp  BigInteger.cpp  Integer.hpp  IntegerExchangeFormat.cpp  IntegerExchangeFormat.hpp  IntegerFromReal.cpp  IntegerFromReal.hpp  IntegerSum.cpp  IntegerSum.hpp  Number.cpp  Number.hpp  RealNumber.hpp
Projects/Number/Src/Integer/: BasicInt.cpp  BasicInt.hpp  BigInteger.cpp  BigInteger.hpp  CachingInteger.cpp  CachingInteger.hpp  DivisionRemainder.cpp  DivisionRemainder.hpp  Integer.hpp  IntegerDifference.cpp  IntegerDifference.hpp  IntegerExchangeFormat.hpp  IntegerFromReal.cpp  IntegerFromReal.hpp  IntegerNegation.cpp  IntegerNegation.hpp  IntegerOperations.cpp  IntegerOperations.hpp  IntegerProduct.cpp  IntegerProduct.hpp  IntegerQuotient.cpp  IntegerQuotient.hpp  IntegerSum.cpp  IntegerSum.hpp
Projects/Number/Src/Number/: BasicComplex.cpp  BasicComplex.hpp  CachingNumber.cpp  CachingNumber.hpp  Difference.cpp  Difference.hpp  Negation.cpp  Negation.hpp  Number.cpp  Number.hpp  NumberExchangeFormat.hpp  NumberOperations.cpp  NumberOperations.hpp  Product.cpp  Product.hpp  Quotient.cpp  Quotient.hpp  Sum.cpp  Sum.hpp
Projects/Number/Src/Real/: CachingReal.cpp  CachingReal.hpp  RealDifference.cpp  RealDifference.hpp  RealNegation.cpp  RealNegation.hpp  RealNumber.cpp  RealNumber.hpp  RealNumberExchangeFormat.hpp  RealNumberOperations.cpp  RealNumberOperations.hpp  RealProduct.cpp  RealProduct.hpp  RealQuotient.cpp  RealQuotient.hpp  RealSum.cpp  RealSum.hpp
Projects/Number/TestSrc/: BasicIntTest.cpp  IntegerOperationsTest.cpp  NumberOperationsTest.cpp  RealNumberOperationsTest.cpp
Projects/String/: CMakeLists.txt
Projects/String/Src/: BasicString.cpp  BasicString.hpp  String.cpp  String.hpp  StringConcatenation.cpp  StringConcatenation.hpp  StringExchangeFormat.hpp  Substring.cpp  Substring.hpp
